<resources>
    <string name="app_name">WiFi-RTT</string>

    <!-- MainActivity -->
    <string name="ScanAPS">Scan</string>
    <string name="CheckRTTAvailability">Check RTT Availability</string>
    <string name="ScanResultHint">Scan result will be displayed here.</string>
    <string name="Ranging">Ranging</string>
    <string name="SSIDHeader">SSID</string>
    <string name="BSSIDHeader">BSSID</string>
    <string name="StartPositioningButton">Start Positioning</string>

    <!-- LocationPermissionRequest -->
    <string name="ActivityPermissionRequestLabel">Location permission request</string>
    <string name="GrantLocationPermission">Continue</string>
    <string name="DenyLocationPermission">No Thanks</string>
    <string name="LocationRequestDescription">This app needs access to your phone\'s
    location to show the distance between this device and the APs.</string>

    <!-- RangingActivity -->
    <string name="ActivityRangingLabel">Show ranging results</string>
    <string name="DelayBeforeNextRequest">RTT Ranging Delay (ms)</string>
    <string name="DelayHint">1000</string>
    <string name="LogButton">Log data</string>
    <string name="RangeHeader">Range(mm)</string>
    <string name="Range_SDHeader">Range_SD(mm)</string>
    <string name="RSSHeader">RSS(dB)</string>
    <string name="AccelerometerHeader">Accelerometer</string>
    <string name="gyroscopeHeader">Gyroscope</string>
    <string name="magnetic_field_Header">Magnetic Field</string>
    <string name="BackgroundScanButton">Automatic Scan</string>
    <string name="AccelerometerX">AccelerometerX: %1$f</string>
    <string name="AccelerometerY">Y: %1$f</string>
    <string name="AccelerometerZ">Z: %1$f</string>
    <string name="Magnetic_FieldX">Magnetic_FieldX: %1$f</string>
    <string name="Magnetic_FieldY">Y: %1$f</string>
    <string name="Magnetic_FieldZ">Z: %1$f</string>
    <string name="GyroscopeX">GyroscopeX: %1$f</string>
    <string name="GyroscopeY">Y: %1$f</string>
    <string name="GyroscopeZ">Z: %1$f</string>
    <string name="ServerURLbit">Please enter URL</string>

    <!-- LocalizationActivity -->
    <string name="ActivityLocalizationLabel">Localization based on floor plan</string>
    <string name="StartUpdatingLocationButton">Start Updating Location</string>

    <!-- activity_localization.xml -->
    <string name="FloorPlanContentDescription">Floor plan for localization</string>
    <string name="LocationPinContentDescription">Pin of current location</string>
    <string name="APContentDescription">Pin of active AP</string>

</resources>
