<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ranging"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewDelayBeforeNextRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="128dp"
        android:text="@string/DelayBeforeNextRequest"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/delayValue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/delayValue"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/textViewDelayBeforeNextRequest"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResults"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRange" />

    <TextView
        android:id="@+id/textViewBSSID_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/BSSIDHeader"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:text="@string/RangeHeader"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textViewBSSID_Header"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRangeSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/Range_SDHeader"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textViewRange"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewRSS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/RSSHeader"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewRangeSD"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackgroundScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onClickBackgroundScan"
        android:text="@string/BackgroundScanButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStartLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickLogData"
        android:text="@string/StartLogButton"
        app:layout_constraintBottom_toTopOf="@+id/btnBackgroundScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDelayBeforeNextRequest" />

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/URLeditText"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/delayValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--
    <Button
        android:id="@+id/btnStopLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickStopLog"
        android:text="@string/StopLogButton"
        app:layout_constraintBottom_toTopOf="@+id/btnBackgroundScan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDelayBeforeNextRequest" />
        -->
</androidx.constraintlayout.widget.ConstraintLayout>