<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewFloorplan"
        android:contentDescription="@string/FloorPlanContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/floor_plan" />

    <ImageView
        android:id="@+id/imageViewLocationPin"
        android:contentDescription="@string/LocationPinContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/location_pin"/>

    <ImageView
        android:id="@+id/imageViewAP1"
        android:contentDescription="@string/APContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/ap_pin" />

    <ImageView
        android:id="@+id/imageViewAP2"
        android:contentDescription="@string/APContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/ap_pin" />

    <ImageView
        android:id="@+id/imageViewAP3"
        android:contentDescription="@string/APContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/ap_pin" />

    <ImageView
        android:id="@+id/imageViewAP4"
        android:contentDescription="@string/APContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/ap_pin" />

    <ImageView
        android:id="@+id/imageViewAP5"
        android:contentDescription="@string/APContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/ap_pin" />

    <ImageView
        android:id="@+id/imageViewAP6"
        android:contentDescription="@string/APContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="90"
        app:srcCompat="@drawable/ap_pin" />

</FrameLayout>